<resources>
    <string name="launching_why_need_location_permission">On Android 6.0 and up, we need permission for accessing location to make Bluetooth work properly. Without that, this application will not be able to discover Sesames.</string>
    <string name="app_name">Sesame</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="new_password">New Password</string>
    <string name="sign_up">Sign up</string>
    <string name="second2">second</string>
    <string name="choosetime">selection period</string>
    <string name="timePrompt">Please select time</string>
    <string name="scriptPrompt">Select script</string>
    <string name="dfu_status_error_msg">Error occurred</string>
    <string name="wins">Wins</string>
    <string name="default_face_name">Face🖊️</string>
    <string name="default_palm_name">Palm Veins🖊️</string>
    <string name="done">Done</string>
    <string name="title_about">About</string>
    <string name="title_friends">Contacts</string>
    <string name="title_registered">Registered</string>
    <string name="title_me">Me</string>
    <string name="title_list">Sesame</string>
    <string name="facial">facial</string>
    <string name="title_detail">Profile</string>
    <string name="cd_home">Home!!</string>
    <string name="cd_list">List</string>
    <string name="cd_form">Form</string>
    <string name="logout">Log Out</string>
    <string name="delete_account">Delete account</string>
    <string name="forever">forever</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hub3_hint_ir">Add infrared devices within 5 meters of this Hub3:</string>
    <string name="qrhint">Scan this QR code with Sesame app to add me on your contact</string>
    <string name="change_sesame_name">Change Sesame Name</string>
    <string name="change_sesame_angle">Configure Angles</string>
    <string name="ssm_update">SesameOS Update＆Restart</string>
    <string name="autolock">Auto-lock timer</string>
    <string name="ds_delay">delay</string>
    <string name="ssm_delete">Delete</string>
    <string name="ssm_add_to_matter_as_doorlock">Add this Sesame to Matter as DoorLock</string>
    <string name="ssm_add_to_matter_as_switch">Add this Sesame to Matter as switch</string>
    <string name="door_lock">Door Lock</string>
    <string name="on_off_switch">Switch</string>
    <string name="cancel">Cancel</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="delete_friend">Delete the Contact</string>
    <string name="manual_operated">Movement in Thumbturn</string>
    <string name="forget_password">Forgot password</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification code</string>
    <string name="re_send_verification_code">Re-send verification code</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="set_lock_position">Set Lock Position</string>
    <string name="set_unlock_position">Set Unlock Position</string>
    <string name="second">later</string>
    <string name="member">Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="add_member">Add Member</string>
    <string name="edit_name">Edit Name</string>
    <string name="manua_lock">Manually Locked</string>
    <string name="manua_unlock">Manually Unlocked</string>
    <string name="please_configure">Please configure the locked/unlocked positions.</string>
    <string name="please_complete">Please manually turn Sesame to fully locked/unlocked positions, and tap the buttons below to configure the locked/unlocked positions respectively.</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="new_sesame">New Device</string>
    <string name="scan_the_qr_code">Scan QR Code</string>
    <string name="no_new_devices">Press ⊕ to register a new device, or scan the QR code to obtain access to an already registered device.</string>
    <string name="no_scan_devices">Bluetooth devices not found</string>
    <string name="onProgressChanged">onProgressChanged</string>
    <string name="onDeviceDisconnected">onDeviceDisconnected</string>
    <string name="onDeviceDisconnecting">onDeviceDisconnecting</string>
    <string name="onDeviceConnected">onDeviceConnected</string>
    <string name="onDfuProcessStarting">onDfuProcessStarting</string>
    <string name="onDfuAborted">onDfuAborted</string>
    <string name="onEnablingDfuMode">onEnablingDfuMode</string>
    <string name="onDfuCompleted">onDfuCompleted</string>
    <string name="onDeviceConnecting">onDeviceConnecting</string>
    <string name="onFirmwareValidating">onFirmwareValidating</string>
    <string name="onDfuProcessStarted">onDfuProcessStarted</string>
    <string name="toastBleNotReadyForDFU">"Please get closer for Bluetooth to be connected, then try again"</string>
    <string name="BleTooManyConnections">"android has too many Bluetooth connections and is not functioning well. Please turn off and then turn on android's Bluetooth."</string>
    <string name="onError">onError</string>
    <string name="too_close">The locked position and the unlocked position are too close😅</string>
    <string name="transfer_owner">Transfer ownership to this member</string>
    <string name="reset_the_sesame">Reset the Sesame and trash the key</string>
    <string name="trash_key">Delete the Sesame</string>
    <string name="share_key">Share the key of the Sesame</string>
    <string name="share_management_view">Share Management View</string>
    <string name="on">On</string>
    <string name="Off">Off</string>
    <string name="immediately">Immediately</string>
    <string name="sec3">3 sec</string>
    <string name="sec1">1 sec</string>
    <string name="sec2">2 sec</string>
    <string name="sec4">4 sec</string>
    <string name="sec5">5 sec</string>
    <string name="sec7">7 sec</string>
    <string name="sec10">10 sec</string>
    <string name="sec15">15 sec</string>
    <string name="sec30">30 sec</string>
    <string name="min1">1 min</string>
    <string name="min2">2 min</string>
    <string name="min3">3 min</string>
    <string name="min4">4 min</string>
    <string name="min5">5 min</string>
    <string name="min10">10 min</string>
    <string name="min15">15 min</string>
    <string name="min30">30 min</string>
    <string name="hr1">1 hr</string>
    <string name="sesame_widget">Widget &amp; Auto Unlock</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="guest">Guest</string>
    <string name="WM2">WiFi Module</string>
    <string name="Sesame">Sesame</string>
    <string name="SesameBot">Sesame bot</string>
    <string name="Sesame5">Sesame 5</string>
    <string name="Sesame5us">Sesame 5 Global</string>
    <string name="SesameBot2">Sesame bot 2</string>
    <string name="Sesame5pro">Sesame 5 Pro</string>
    <string name="SesameBike">Sesame Bike</string>
    <string name="SesameBike2">Sesame Bike2</string>
    <string name="SesameOpenSensor">Open Sensor</string>
    <string name="SSMTouchPro">Sesame Touch Pro</string>
    <string name="SSMTouch">Sesame Touch</string>
    <string name="BLEConnector">BLE Connector</string>
    <string name="Hub3">Hub3</string>
    <string name="CHRemote">Remote</string>
    <string name="CHRemoteNano">Remote nano</string>
    <string name="SSMFacePro">Sesame Face Pro</string>
    <string name="SSMFaceProAI">Sesame Face Pro AI</string>
    <string name="SSMFaceAI">Sesame Face AI</string>
    <string name="SSMFace">Sesame Face</string>
    <string name="Sesame6Pro">Sesame 6 Pro</string>
    <string name="unLoginHistoryTag">Unlogin user</string>
    <string name="empty_friend">No Contacts</string>
    <string name="wm2_update">Software Update＆Restart</string>
    <string name="wm2_pwk">WiFi Password</string>
    <string name="wm2_pwk_hint">Please enter the WiFi password</string>
    <string name="hub3_ir_title">IR Control</string>
    <string name="wm2_ssid">WiFi SSID</string>
    <string name="shareSesameToFriends">Tap to share devices</string>
    <string name="revoke">Revoke</string>
    <string name="login">Log In/Sign up</string>
    <string name="loginNeed">Please login.</string>
    <string name="Notification">Notifications</string>
    <string name="OpenSensor_on">Lock with Open Sensor</string>
    <string name="remoteNanoTriggerSettingHint">Long press time to avoid mis-operation</string>
    <string name="VerificationCode">Verification code sent to your email</string>
    <string name="ResetWifiModule2">Reset the WiFi Module and trash the key</string>
    <string name="ResetHub3">Reset the Hub3 and trash the key</string>
    <string name="TrashTheWifiModule2Key">Delete the WiFi Module</string>
    <string name="TrashTheHub3Module2Key">Delete the Hub3</string>
    <string name="TrashTheOpenSensorKey">Delete the Open Sensor</string>
    <string name="qrcodeNotSupport">This QR code does not support</string>
    <string name="addFail">Add Failed</string>
    <string name="cameraError">Camera Error</string>
    <string name="addSesameTo">Add Sesame to…</string>
    <string name="addOpenSensorToHub3">Add This Open Sensor to Hub3 …</string>
    <string name="wm2NetworkConnectionStatus">Internet Status</string>
    <string name="modifyGuestKeyTag">Rename the Guest Key</string>
    <string name="key_level">Role &amp; Permission</string>
    <string name="click_script">Script</string>
    <string name="Wm2WifiOK">WiFi Module is connected to network successfully</string>
    <string name="BotModeNormal">Click then return</string>
    <string name="BotModeReverse">Reversed</string>
    <string name="BotModeCell">Make a circle</string>
    <string name="PressModeCell">Release then return</string>
    <string name="wm2_select_ssid">Select your WiFi network</string>
    <string name="nfc_hint">Setup by tapping the NFC tag</string>
    <string name="nfc_reset">Delete the NFC tag</string>
    <string name="noble">Bluetooth is off</string>
    <string name="NoBleSignal">Bluetooth signal not found, please get closer</string>
    <string name="wm2_hint">Add Sesame to be connected within 5 meters of this WiFi Module:</string>
    <string name="hub3_hint">Add Sesame to be connected within 5 meters of this Hub3 :</string>
    <string name="friend_keys_hint">The following device keys are shared with this contact:</string>
    <string name="drop_hint">Deleting the %1$s won\'t reset the %1$s. To reset the %1$s, please press reset button with a pin until the LED light turns off.</string>
    <string name="drop_hint_press">Deleting the %1$s won\'t reset the %1$s. To reset the %1$s, please press reset button the LED light turns off.</string>
    <string name="historyLOCK">is locked</string>
    <string name="historyUNLOCK">is unlocked</string>
    <string name="no_scan_devices_hint1">1. Are Bluetooth and Location Service permissions on Android are both enabled？</string>
    <string name="no_scan_devices_hint2">2. Sometimes restarting the android phone can solve the problem.</string>
    <string name="no_scan_devices_hint3">3. Is the unregistered device nearby？</string>
    <string name="no_scan_devices_hint4">4. To reset the registered device, please press the reset button with a pin until the LED light turns off.</string>
    <string name="pleaseemail">Please enter the recipient\'s email address</string>
    <string name="ssm_name">Name</string>
    <string name="ssm_hint_enter_name">Please enter name</string>
    <string name="ssm_password">Password</string>
    <string name="ssm_hint_enter_password">Please enter password (numbers only)</string>
    <string name="ssm_batch_add">Batch Add</string>
    <string name="ssm_cancel">Cancel</string>
    <string name="ssm_confirm">Confirm</string>
</resources>