<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/top_back_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:padding="22dp"
        android:scaleType="center"
        android:src="@drawable/ic_icons_filled_close" />

    <include
        android:id="@+id/err_zone"
        layout="@layout/view_status_zone"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_below="@+id/top_back_img" />

    <co.utils.recycle.EmptyRecyclerView
        android:id="@+id/leaderboard_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/err_zone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/no_scan_devices"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/no_scan_devices_hint1"
            android:textColor="@color/text_hint"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/no_scan_devices_hint2"
            android:textColor="@color/text_hint"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/no_scan_devices_hint3"
            android:textColor="@color/text_hint"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/no_scan_devices_hint4"
            android:textColor="@color/text_hint"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>